--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
         "babelify",
         {
           "presets": [
-            "es2015"
+            [
+              "es2015",
+              {
+                "loose": true
+              }
+            ]
+          ],
+          "plugins": [
+            "transform-runtime"
           ]
         }
       ]
@@ -23,5 +31,10 @@
   "bugs": {
     "url": "https://github.com/nowsecure/frida-uikit/issues"
   },
-  "homepage": "https://github.com/nowsecure/frida-uikit#readme"
+  "homepage": "https://github.com/nowsecure/frida-uikit#readme",
+  "dependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-runtime": "^6.20.0"
+  }
 }
