--- a/package.json
+++ b/package.json
@@ -7,31 +7,6 @@
     "/index.js",
     "/lib/**/*.js"
   ],
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            [
-              "@babel/preset-env",
-              {
-                "loose": true
-              }
-            ]
-          ],
-          "plugins": [
-            [
-              "@babel/plugin-transform-runtime",
-              {
-                "corejs": 2
-              }
-            ]
-          ]
-        }
-      ]
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nowsecure/frida-uikit.git"
@@ -40,12 +15,5 @@
   "bugs": {
     "url": "https://github.com/nowsecure/frida-uikit/issues"
   },
-  "homepage": "https://github.com/nowsecure/frida-uikit#readme",
-  "dependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/runtime-corejs2": "^7.1.2",
-    "babelify": "^10.0.0"
-  }
+  "homepage": "https://github.com/nowsecure/frida-uikit#readme"
 }
