--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.1.2",
   "description": "Inspect and manipulate UIKit-based GUIs through Frida",
   "main": "index.js",
+  "type": "module",
   "files": [
     "/index.js",
     "/lib/**/*.js"
